# internal/http/app/docs/swagger.json
@@ -24,14 +24,25 @@
     "paths": {
         "/orders": {
             "get": {
-                "description": "Retrieve all orders from the system",
+                "description": "Retrieve a list of all orders in the database with pagination",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Orders"
+                    "orders"
                 ],
                 "summary": "List all orders",
+                "parameters": [
+                    {
+                        "description": "Page information",
+                        "name": "pagination",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_abdulazizax_udevslab-lesson3_internal_models.Pagination"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "List of orders",
@@ -43,7 +54,7 @@
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/github_com_abdulazizax_udevslab-lesson3_internal_models.Error"
                         }
@@ -69,7 +80,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_abdulazizax_udevslab-lesson3_internal_models.Order"
+                            "$ref": "#/definitions/github_com_abdulazizax_udevslab-lesson3_internal_models.OrderCreate"
                         }
                     }
                 ],
@@ -77,7 +88,7 @@
                     "201": {
                         "description": "Order ID",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/gin.H"
                         }
                     },
                     "400": {
@@ -88,6 +99,67 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_abdulazizax_udevslab-lesson3_internal_models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders/range": {
+            "get": {
+                "description": "Retrieve a list of all orders within a date range in the database, sorted by created_at in ascending order",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "List all orders within a specific date range, with pagination, and sorted by date (ascending)",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Order (-1: decreasing, 1: increasing)",
+                        "name": "order",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "Page information",
+                        "name": "pagination",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_abdulazizax_udevslab-lesson3_internal_models.Pagination"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Start date (YYYY-MM-DD)",
+                        "name": "start_date",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "End date (YYYY-MM-DD)",
+                        "name": "end_date",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of orders",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_abdulazizax_udevslab-lesson3_internal_models.Order"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/github_com_abdulazizax_udevslab-lesson3_internal_models.Error"
                         }
@@ -175,7 +247,7 @@
                     "200": {
                         "description": "Order updated successfully",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/gin.H"
                         }
                     },
                     "400": {
@@ -683,6 +755,26 @@
                 },
                 "updatedAt": {
                     "type": "integer"
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_abdulazizax_udevslab-lesson3_internal_models.OrderCreate": {
+            "type": "object",
+            "properties": {
+                "productId": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
                 }
             }
         },
@@ -698,10 +790,24 @@
                 "status": {
                     "type": "string"
                 },
-                "total": {
-                    "type": "number"
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_abdulazizax_udevslab-lesson3_internal_models.Pagination": {
+            "type": "object",
+            "required": [
+                "limit",
+                "page"
+            ],
+            "properties": {
+                "limit": {
+                    "description": "Query: ?limit=10",
+                    "type": "integer"
                 },
-                "updatedAt": {
+                "page": {
+                    "description": "Query: ?page=1",
                     "type": "integer"
                 }
             }
